// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> renders correctly 1`] = `
.eTQPUD {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: 0 calc(-0.5 * 0);
}

<div
  className="sc-bdVaJa eTQPUD"
/>
`;

exports[`<Grid /> renders correctly with gutter 1`] = `
.cJdnKI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: 0 calc(-0.5 * 10px);
}

<div
  className="sc-bdVaJa cJdnKI"
/>
`;
